--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ github:
   is_project_page: true
   repository_url: "https://github.com/T-VeeraBabu/tech-insights"
 show_downloads: false
-#header_image: " "
+header_image: s4hana-thebest.png
 
 plugins:
   - jekyll-seo-tag
